POPRAVLJENI POPUSTI NA ŽELJO STRANKE
Izbrisane so vse navednice komb2, komb1 popravljen v priporocilo.
Popraviti je treba še šifrant!
#177

--- a/popusti.ui
+++ b/popusti.ui
@@ -147,7 +147,7 @@
         <item row="5" column="0">
          <widget class="QLabel" name="label_8">
           <property name="text">
-           <string>Naročilo BenOBLIKOVALEC + BenTISKAR</string>
+           <string>Po priporočilu stranke</string>
           </property>
          </widget>
         </item>
@@ -167,7 +167,7 @@
            </spacer>
           </item>
           <item>
-           <widget class="QLineEdit" name="txt_popust_komb1">
+           <widget class="QLineEdit" name="txt_popust_priporocilo">
             <property name="minimumSize">
              <size>
               <width>75</width>
@@ -181,63 +181,20 @@
              </size>
             </property>
             <property name="text">
-             <string>txt_popust_komb1</string>
+             <string>txt_popust_priporocilo</string>
             </property>
            </widget>
           </item>
          </layout>
         </item>
         <item row="6" column="0">
-         <widget class="QLabel" name="label_7">
-          <property name="text">
-           <string>Naročilo BenVPRAŠALNIK + BenANALITIK + BenOBLIKOVALEC</string>
-          </property>
-         </widget>
-        </item>
-        <item row="6" column="1">
-         <layout class="QHBoxLayout" name="horizontalLayout_5">
-          <item>
-           <spacer name="horizontalSpacer_5">
-            <property name="orientation">
-             <enum>Qt::Horizontal</enum>
-            </property>
-            <property name="sizeHint" stdset="0">
-             <size>
-              <width>40</width>
-              <height>20</height>
-             </size>
-            </property>
-           </spacer>
-          </item>
-          <item>
-           <widget class="QLineEdit" name="txt_popust_komb2">
-            <property name="minimumSize">
-             <size>
-              <width>75</width>
-              <height>0</height>
-             </size>
-            </property>
-            <property name="maximumSize">
-             <size>
-              <width>75</width>
-              <height>16777215</height>
-             </size>
-            </property>
-            <property name="text">
-             <string>txt_popust_komb2</string>
-            </property>
-           </widget>
-          </item>
-         </layout>
-        </item>
-        <item row="7" column="0">
          <widget class="QLabel" name="label_6">
           <property name="text">
            <string>Stalna stranka</string>
           </property>
          </widget>
         </item>
-        <item row="7" column="1">
+        <item row="6" column="1">
          <layout class="QHBoxLayout" name="horizontalLayout_8">
           <item>
            <spacer name="horizontalSpacer_8">
@@ -273,14 +230,14 @@
           </item>
          </layout>
         </item>
-        <item row="8" column="0">
+        <item row="7" column="0">
          <widget class="QLabel" name="label_4">
           <property name="text">
            <string>Akcijski popust</string>
           </property>
          </widget>
         </item>
-        <item row="8" column="1">
+        <item row="7" column="1">
          <layout class="QHBoxLayout" name="horizontalLayout_10">
           <item>
            <spacer name="horizontalSpacer_10">
