--- a/opravila.ui
+++ b/opravila.ui
@@ -24,7 +24,7 @@
    <item>
     <widget class="QTabWidget" name="tab_opravila">
      <property name="currentIndex">
-      <number>0</number>
+      <number>1</number>
      </property>
      <widget class="QWidget" name="tab_podatki">
       <attribute name="title">
@@ -1076,7 +1076,7 @@
             <x>0</x>
             <y>0</y>
             <width>913</width>
-            <height>727</height>
+            <height>691</height>
            </rect>
           </property>
           <layout class="QVBoxLayout" name="verticalLayout_9">
@@ -1088,50 +1088,6 @@
              <layout class="QGridLayout" name="gridLayout_10">
               <item row="0" column="0">
                <layout class="QGridLayout" name="gridLayout_13">
-                <item row="6" column="1">
-                 <layout class="QHBoxLayout" name="horizontalLayout_28">
-                  <item>
-                   <spacer name="horizontalSpacer_32">
-                    <property name="orientation">
-                     <enum>Qt::Horizontal</enum>
-                    </property>
-                    <property name="sizeHint" stdset="0">
-                     <size>
-                      <width>40</width>
-                      <height>20</height>
-                     </size>
-                    </property>
-                   </spacer>
-                  </item>
-                  <item>
-                   <widget class="QCheckBox" name="cb_popust_akcija">
-                    <property name="text">
-                     <string>cb_popust_akcija</string>
-                    </property>
-                   </widget>
-                  </item>
-                  <item>
-                   <spacer name="horizontalSpacer_33">
-                    <property name="orientation">
-                     <enum>Qt::Horizontal</enum>
-                    </property>
-                    <property name="sizeHint" stdset="0">
-                     <size>
-                      <width>40</width>
-                      <height>20</height>
-                     </size>
-                    </property>
-                   </spacer>
-                  </item>
-                 </layout>
-                </item>
-                <item row="2" column="0">
-                 <widget class="QLabel" name="label_17">
-                  <property name="text">
-                   <string>Facebook - všeč mi je (vsi prijatelji)</string>
-                  </property>
-                 </widget>
-                </item>
                 <item row="1" column="2">
                  <widget class="QLineEdit" name="txt_popust_fb1">
                   <property name="minimumSize">
@@ -1150,6 +1106,43 @@
                    <string>txt_popust_fb1</string>
                   </property>
                  </widget>
+                </item>
+                <item row="4" column="1">
+                 <layout class="QHBoxLayout" name="horizontalLayout_26">
+                  <item>
+                   <spacer name="horizontalSpacer_28">
+                    <property name="orientation">
+                     <enum>Qt::Horizontal</enum>
+                    </property>
+                    <property name="sizeHint" stdset="0">
+                     <size>
+                      <width>40</width>
+                      <height>20</height>
+                     </size>
+                    </property>
+                   </spacer>
+                  </item>
+                  <item>
+                   <widget class="QCheckBox" name="cb_popust_stalna">
+                    <property name="text">
+                     <string>cb_popust_stalna</string>
+                    </property>
+                   </widget>
+                  </item>
+                  <item>
+                   <spacer name="horizontalSpacer_29">
+                    <property name="orientation">
+                     <enum>Qt::Horizontal</enum>
+                    </property>
+                    <property name="sizeHint" stdset="0">
+                     <size>
+                      <width>40</width>
+                      <height>20</height>
+                     </size>
+                    </property>
+                   </spacer>
+                  </item>
+                 </layout>
                 </item>
                 <item row="1" column="1">
                  <layout class="QHBoxLayout" name="horizontalLayout_29">
@@ -1188,6 +1181,48 @@
                   </item>
                  </layout>
                 </item>
+                <item row="2" column="2">
+                 <widget class="QLineEdit" name="txt_popust_fb2">
+                  <property name="minimumSize">
+                   <size>
+                    <width>74</width>
+                    <height>0</height>
+                   </size>
+                  </property>
+                  <property name="maximumSize">
+                   <size>
+                    <width>75</width>
+                    <height>16777215</height>
+                   </size>
+                  </property>
+                  <property name="text">
+                   <string>txt_popust_fb2</string>
+                  </property>
+                 </widget>
+                </item>
+                <item row="3" column="0">
+                 <widget class="QLabel" name="label_23">
+                  <property name="text">
+                   <string>Po priporočilu stranke</string>
+                  </property>
+                 </widget>
+                </item>
+                <item row="0" column="2">
+                 <widget class="QLabel" name="label_30">
+                  <property name="minimumSize">
+                   <size>
+                    <width>0</width>
+                    <height>0</height>
+                   </size>
+                  </property>
+                  <property name="text">
+                   <string>Procenti</string>
+                  </property>
+                  <property name="alignment">
+                   <set>Qt::AlignCenter</set>
+                  </property>
+                 </widget>
+                </item>
                 <item row="0" column="1">
                  <widget class="QLabel" name="label_40">
                   <property name="text">
@@ -1195,6 +1230,20 @@
                   </property>
                   <property name="alignment">
                    <set>Qt::AlignCenter</set>
+                  </property>
+                 </widget>
+                </item>
+                <item row="1" column="0">
+                 <widget class="QLabel" name="label_28">
+                  <property name="text">
+                   <string>Facebook - všeč mi je (stranka)</string>
+                  </property>
+                 </widget>
+                </item>
+                <item row="5" column="0">
+                 <widget class="QLabel" name="label_27">
+                  <property name="text">
+                   <string>Akcijski popust</string>
                   </property>
                  </widget>
                 </item>
@@ -1235,105 +1284,14 @@
                   </item>
                  </layout>
                 </item>
-                <item row="4" column="2">
-                 <widget class="QLineEdit" name="txt_popust_komb2">
-                  <property name="minimumSize">
-                   <size>
-                    <width>74</width>
-                    <height>0</height>
-                   </size>
-                  </property>
-                  <property name="maximumSize">
-                   <size>
-                    <width>75</width>
-                    <height>16777215</height>
-                   </size>
-                  </property>
+                <item row="4" column="0">
+                 <widget class="QLabel" name="label_25">
                   <property name="text">
-                   <string>txt_popust_komb2</string>
+                   <string>Stalna stranka</string>
                   </property>
                  </widget>
                 </item>
-                <item row="2" column="2">
-                 <widget class="QLineEdit" name="txt_popust_fb2">
-                  <property name="minimumSize">
-                   <size>
-                    <width>74</width>
-                    <height>0</height>
-                   </size>
-                  </property>
-                  <property name="maximumSize">
-                   <size>
-                    <width>75</width>
-                    <height>16777215</height>
-                   </size>
-                  </property>
-                  <property name="text">
-                   <string>txt_popust_fb2</string>
-                  </property>
-                 </widget>
-                </item>
-                <item row="0" column="2">
-                 <widget class="QLabel" name="label_30">
-                  <property name="minimumSize">
-                   <size>
-                    <width>0</width>
-                    <height>0</height>
-                   </size>
-                  </property>
-                  <property name="text">
-                   <string>Procenti</string>
-                  </property>
-                  <property name="alignment">
-                   <set>Qt::AlignCenter</set>
-                  </property>
-                 </widget>
-                </item>
-                <item row="3" column="1">
-                 <layout class="QHBoxLayout" name="horizontalLayout_24">
-                  <item>
-                   <spacer name="horizontalSpacer_24">
-                    <property name="orientation">
-                     <enum>Qt::Horizontal</enum>
-                    </property>
-                    <property name="sizeHint" stdset="0">
-                     <size>
-                      <width>40</width>
-                      <height>20</height>
-                     </size>
-                    </property>
-                   </spacer>
-                  </item>
-                  <item>
-                   <widget class="QCheckBox" name="cb_popust_komb1">
-                    <property name="text">
-                     <string>cb_popust_komb1</string>
-                    </property>
-                   </widget>
-                  </item>
-                  <item>
-                   <spacer name="horizontalSpacer_25">
-                    <property name="orientation">
-                     <enum>Qt::Horizontal</enum>
-                    </property>
-                    <property name="sizeHint" stdset="0">
-                     <size>
-                      <width>40</width>
-                      <height>20</height>
-                     </size>
-                    </property>
-                   </spacer>
-                  </item>
-                 </layout>
-                </item>
-                <item row="3" column="0">
-                 <widget class="QLabel" name="label_23">
-                  <property name="text">
-                   <string>Naročilo BenOBLIKOVALEC + BenTISKAR</string>
-                  </property>
-                 </widget>
-                </item>
-                <item row="6" column="2">
+                <item row="5" column="2">
                  <widget class="QLineEdit" name="txt_popust_akcija">
                   <property name="minimumSize">
                    <size>
@@ -1352,24 +1310,14 @@
                   </property>
                  </widget>
                 </item>
-                <item row="5" column="0">
-                 <widget class="QLabel" name="label_25">
+                <item row="2" column="0">
+                 <widget class="QLabel" name="label_17">
                   <property name="text">
-                   <string>Stalna stranka</string>
+                   <string>Facebook - všeč mi je (vsi prijatelji)</string>
                   </property>
                  </widget>
                 </item>
-                <item row="0" column="0">
-                 <widget class="QLabel" name="label_29">
-                  <property name="text">
-                   <string>Opis popusta</string>
-                  </property>
-                  <property name="alignment">
-                   <set>Qt::AlignCenter</set>
-                  </property>
-                 </widget>
-                </item>
-                <item row="5" column="2">
+                <item row="4" column="2">
                  <widget class="QLineEdit" name="txt_popust_stalna_stranka">
                   <property name="minimumSize">
                    <size>
@@ -1389,7 +1337,7 @@
                  </widget>
                 </item>
                 <item row="3" column="2">
-                 <widget class="QLineEdit" name="txt_popust_komb1">
+                 <widget class="QLineEdit" name="txt_popust_priporocilo">
                   <property name="minimumSize">
                    <size>
                     <width>74</width>
@@ -1403,28 +1351,14 @@
                    </size>
                   </property>
                   <property name="text">
-                   <string>txt_popust_komb1</string>
+                   <string>txt_popust_priporocilo</string>
                   </property>
                  </widget>
                 </item>
-                <item row="4" column="0">
-                 <widget class="QLabel" name="label_24">
-                  <property name="text">
-                   <string>Naročilo BenVPRAŠALNIK + BenANALITIK + BenOBLIKOVALEC</string>
-                  </property>
-                 </widget>
-                </item>
-                <item row="1" column="0">
-                 <widget class="QLabel" name="label_28">
-                  <property name="text">
-                   <string>Facebook - všeč mi je (stranka)</string>
-                  </property>
-                 </widget>
-                </item>
-                <item row="4" column="1">
-                 <layout class="QHBoxLayout" name="horizontalLayout_25">
+                <item row="3" column="1">
+                 <layout class="QHBoxLayout" name="horizontalLayout_24">
                   <item>
-                   <spacer name="horizontalSpacer_26">
+                   <spacer name="horizontalSpacer_24">
                     <property name="orientation">
                      <enum>Qt::Horizontal</enum>
                     </property>
@@ -1437,14 +1371,14 @@
                    </spacer>
                   </item>
                   <item>
-                   <widget class="QCheckBox" name="cb_popust_komb2">
+                   <widget class="QCheckBox" name="cb_popust_priporocilo">
                     <property name="text">
-                     <string>cb_popust_komb2</string>
+                     <string>cb_popust_priporocilo</string>
                     </property>
                    </widget>
                   </item>
                   <item>
-                   <spacer name="horizontalSpacer_27">
+                   <spacer name="horizontalSpacer_25">
                     <property name="orientation">
                      <enum>Qt::Horizontal</enum>
                     </property>
@@ -1459,9 +1393,9 @@
                  </layout>
                 </item>
                 <item row="5" column="1">
-                 <layout class="QHBoxLayout" name="horizontalLayout_26">
+                 <layout class="QHBoxLayout" name="horizontalLayout_28">
                   <item>
-                   <spacer name="horizontalSpacer_28">
+                   <spacer name="horizontalSpacer_32">
                     <property name="orientation">
                      <enum>Qt::Horizontal</enum>
                     </property>
@@ -1474,14 +1408,14 @@
                    </spacer>
                   </item>
                   <item>
-                   <widget class="QCheckBox" name="cb_popust_stalna">
+                   <widget class="QCheckBox" name="cb_popust_akcija">
                     <property name="text">
-                     <string>cb_popust_stalna</string>
+                     <string>cb_popust_akcija</string>
                     </property>
                    </widget>
                   </item>
                   <item>
-                   <spacer name="horizontalSpacer_29">
+                   <spacer name="horizontalSpacer_33">
                     <property name="orientation">
                      <enum>Qt::Horizontal</enum>
                     </property>
@@ -1495,10 +1429,13 @@
                   </item>
                  </layout>
                 </item>
-                <item row="6" column="0">
-                 <widget class="QLabel" name="label_27">
+                <item row="0" column="0">
+                 <widget class="QLabel" name="label_29">
                   <property name="text">
-                   <string>Akcijski popust</string>
+                   <string>Opis popusta</string>
+                  </property>
+                  <property name="alignment">
+                   <set>Qt::AlignCenter</set>
                   </property>
                  </widget>
                 </item>
@@ -2568,10 +2505,8 @@
   <tabstop>txt_popust_fb1</tabstop>
   <tabstop>cb_popust_fb2</tabstop>
   <tabstop>txt_popust_fb2</tabstop>
-  <tabstop>cb_popust_komb1</tabstop>
-  <tabstop>txt_popust_komb1</tabstop>
-  <tabstop>cb_popust_komb2</tabstop>
-  <tabstop>txt_popust_komb2</tabstop>
+  <tabstop>cb_popust_priporocilo</tabstop>
+  <tabstop>txt_popust_priporocilo</tabstop>
   <tabstop>cb_popust_stalna</tabstop>
   <tabstop>txt_popust_stalna_stranka</tabstop>
   <tabstop>cb_popust_akcija</tabstop>
