--- a/stranke.ui
+++ b/stranke.ui
@@ -9,7 +9,7 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>737</width>
+    <width>561</width>
     <height>687</height>
    </rect>
   </property>
@@ -85,7 +85,7 @@
            <rect>
             <x>0</x>
             <y>0</y>
-            <width>682</width>
+            <width>601</width>
             <height>1051</height>
            </rect>
           </property>
@@ -837,7 +837,7 @@
               </property>
              </widget>
             </item>
-            <item row="5" column="0">
+            <item row="4" column="0">
              <widget class="QLabel" name="label_25">
               <property name="text">
                <string>Stalna stranka</string>
@@ -854,13 +854,6 @@
               </property>
              </widget>
             </item>
-            <item row="4" column="0">
-             <widget class="QLabel" name="label_24">
-              <property name="text">
-               <string>Naročilo BenVPRAŠALNIK + BenANALITIK + BenOBLIKOVALEC</string>
-              </property>
-             </widget>
-            </item>
             <item row="1" column="0">
              <widget class="QLabel" name="label_28">
               <property name="text">
@@ -868,7 +861,7 @@
               </property>
              </widget>
             </item>
-            <item row="5" column="2">
+            <item row="4" column="2">
              <widget class="QLineEdit" name="txt_popust_stalna_stranka">
               <property name="minimumSize">
                <size>
@@ -887,7 +880,7 @@
               </property>
              </widget>
             </item>
-            <item row="6" column="2">
+            <item row="5" column="2">
              <widget class="QLineEdit" name="txt_popust_akcija">
               <property name="minimumSize">
                <size>
@@ -906,27 +899,22 @@
               </property>
              </widget>
             </item>
-            <item row="4" column="2">
-             <widget class="QLineEdit" name="txt_popust_komb2">
-              <property name="minimumSize">
-               <size>
-                <width>74</width>
-                <height>0</height>
-               </size>
-              </property>
-              <property name="maximumSize">
-               <size>
-                <width>75</width>
-                <height>16777215</height>
-               </size>
-              </property>
+            <item row="3" column="0">
+             <widget class="QLabel" name="label_23">
               <property name="text">
-               <string>txt_popust_komb2</string>
+               <string>Po priporočilu stranke</string>
+              </property>
+             </widget>
+            </item>
+            <item row="5" column="0">
+             <widget class="QLabel" name="label_27">
+              <property name="text">
+               <string>Akcijski popust</string>
               </property>
              </widget>
             </item>
             <item row="3" column="2">
-             <widget class="QLineEdit" name="txt_popust_komb1">
+             <widget class="QLineEdit" name="txt_popust_priporocilo">
               <property name="minimumSize">
                <size>
                 <width>74</width>
@@ -940,21 +928,7 @@
                </size>
               </property>
               <property name="text">
-               <string>txt_popust_komb1</string>
-              </property>
-             </widget>
-            </item>
-            <item row="3" column="0">
-             <widget class="QLabel" name="label_23">
-              <property name="text">
-               <string>Naročilo BenOBLIKOVALEC + BenTISKAR</string>
-              </property>
-             </widget>
-            </item>
-            <item row="6" column="0">
-             <widget class="QLabel" name="label_27">
-              <property name="text">
-               <string>Akcijski popust</string>
+               <string>txt_popust_priporocilo</string>
               </property>
              </widget>
             </item>
@@ -1003,7 +977,7 @@
               </property>
              </widget>
             </item>
-            <item row="6" column="1">
+            <item row="5" column="1">
              <layout class="QHBoxLayout" name="horizontalLayout_28">
               <item>
                <spacer name="horizontalSpacer_32">
@@ -1056,7 +1030,7 @@
               </property>
              </widget>
             </item>
-            <item row="5" column="1">
+            <item row="4" column="1">
              <layout class="QHBoxLayout" name="horizontalLayout_26">
               <item>
                <spacer name="horizontalSpacer_28">
@@ -1093,43 +1067,6 @@
               </item>
              </layout>
             </item>
-            <item row="4" column="1">
-             <layout class="QHBoxLayout" name="horizontalLayout_25">
-              <item>
-               <spacer name="horizontalSpacer_26">
-                <property name="orientation">
-                 <enum>Qt::Horizontal</enum>
-                </property>
-                <property name="sizeHint" stdset="0">
-                 <size>
-                  <width>40</width>
-                  <height>20</height>
-                 </size>
-                </property>
-               </spacer>
-              </item>
-              <item>
-               <widget class="QCheckBox" name="cb_popust_komb2">
-                <property name="text">
-                 <string>cb_popust_komb2</string>
-                </property>
-               </widget>
-              </item>
-              <item>
-               <spacer name="horizontalSpacer_27">
-                <property name="orientation">
-                 <enum>Qt::Horizontal</enum>
-                </property>
-                <property name="sizeHint" stdset="0">
-                 <size>
-                  <width>40</width>
-                  <height>20</height>
-                 </size>
-                </property>
-               </spacer>
-              </item>
-             </layout>
-            </item>
             <item row="3" column="1">
              <layout class="QHBoxLayout" name="horizontalLayout_24">
               <item>
@@ -1146,9 +1083,9 @@
                </spacer>
               </item>
               <item>
-               <widget class="QCheckBox" name="cb_popust_komb1">
+               <widget class="QCheckBox" name="cb_popust_priporocilo">
                 <property name="text">
-                 <string>cb_popust_komb1</string>
+                 <string>cb_popust_priporocilo</string>
                 </property>
                </widget>
               </item>
@@ -1760,8 +1697,8 @@
            <rect>
             <x>0</x>
             <y>0</y>
-            <width>695</width>
-            <height>579</height>
+            <width>668</width>
+            <height>566</height>
            </rect>
           </property>
           <layout class="QVBoxLayout" name="verticalLayout_6">
@@ -1907,10 +1844,8 @@
   <tabstop>txt_popust_fb1</tabstop>
   <tabstop>cb_popust_fb2</tabstop>
   <tabstop>txt_popust_fb2</tabstop>
-  <tabstop>cb_popust_komb1</tabstop>
-  <tabstop>txt_popust_komb1</tabstop>
-  <tabstop>cb_popust_komb2</tabstop>
-  <tabstop>txt_popust_komb2</tabstop>
+  <tabstop>cb_popust_priporocilo</tabstop>
+  <tabstop>txt_popust_priporocilo</tabstop>
   <tabstop>cb_popust_stalna</tabstop>
   <tabstop>txt_popust_stalna_stranka</tabstop>
   <tabstop>cb_popust_akcija</tabstop>
